@@ -1,5 +1,9 @@
 2011-09-23  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tclIORTrans.c: More revisions to get finalization of
+	ReflectedTransforms correct, including adopting a "dead" field as
+	was done in tclIORChan.c.
+
 	* tests/thread.test:	Stop using the deprecated thread management
 	commands of the tcltest package.  The test suite ought to provide
 	these tools for itself.  They do not belong in a testing harness.
